# dump

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: arch.h  dtime.c  dtime.h  hash.c  hash.h  log.c  log.h  sfile.c  sfile.h
prog/decide/: main.c
